# family-app

./: .gitignore  CLAUDE.md  Makefile  README.md  go.mod  main.go
.claude/agents/: gemini-analyzer.md
.github/workflows/: build-windows.yml  release.yml
api/: index.js  package.json
api_go/: go.mod  main.go
api_go/ffmpeg/: ffmpeg.go
api_go/proto/detectorpb/: detector.pb.go  detector_grpc.pb.go
api_go/types/: types.go
api_go/websocket/: client.go  handler.go  manager.go
api_rs/: Cargo.toml
api_rs/src/: main.rs
proto/: detector.proto
server/: .gitignore  index.js  pnpm-lock.yaml
src-tauri/: Cargo.toml  family-app.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
templates/: index.html
view/: package.json  pnpm-lock.yaml  vite.config.ts
view/src/: App.css  App.tsx  index.css  main.tsx  routeTree.gen.ts
view/src/components/: RTSPViewer.tsx  updater.tsx
view/src/components/common/: card-section.tsx
view/src/components/icons/: index.tsx
view/src/components/layout/: header.tsx  layout.tsx  main.tsx
view/src/components/sidebar/: app-sidebar.tsx  nav-footer.tsx  nav-main.tsx  nav-user.tsx
view/src/components/ui/: empty-state.tsx  sonner.tsx  (+1 more)
view/src/features/: root.tsx
view/src/hooks/: use-version.ts
view/src/routes/: __root.tsx
view/src/stores/: camera-store.ts  header-store.ts  vesion-store.ts
view/src/types/: card-section.ts  index.ts
worker/: detector_pb2.py  detector_pb2.pyi  detector_pb2_grpc.py  detector_pb2_grpc.pyi  main.py  pyproject.toml
(+28 files in other folders)
